FBP reconstructions done ✅

--- a/P2-DL4MI-CT_Reconstruction.ipynb
+++ b/P2-DL4MI-CT_Reconstruction.ipynb
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Case A**: Use a fixed angle range in a different number of projections."
+    "**Case A:** Use a fixed angle range in a different number of projections."
    ]
   },
   {
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Filters exploration**"
+    "**Filters exploration**: The available filters are selected and all of them are applied to the reconstruction of an image with a sinogram containing 256 projections in the range 0º-360º. The objective is to check the effect that each filter has on the reconstruction."
    ]
   },
   {
@@ -361,7 +361,6 @@
     "rows = 2\n",
     "columns = 3\n",
     "\n",
-    "\n",
     "# Create figure\n",
     "fig, axs = plt.subplots(nrows=rows, ncols=columns, figsize=(22, 15))\n",
     "\n",
@@ -385,7 +384,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PLOT DE LOS FILTERS "
+    "As can be seen, **some of the filters remove more noise than others. However, this comes at a cost in reduced image detail. The point of filters is to remove high frequency noise in the image reconstruction.** Therefore, depending on the type of filter, we will have better or worse removal, which is related to the amount of detail that is preserved.\n",
+    "\n",
+    "The explanation behind what we are observing can be obtained in the fact that, in the reconstruction of the image, **the Fourier transform sample the low frequencies much more densely than the high frequencies.** The result of this fact is the reason why the reconstruction appears to be blurry. Because at the Fourier transformation, the low frequencies take care of the smooth surfaces and the high frequencies take care of the details and the sharp edges. Thus, **the final image we obtain is blurred and in order to remove the blur, a filter has to be applied to the high frequencies, destroying the noise, but also the details**.\n",
+    "\n",
+    "To check the effect of each filter, it has been decided to enter the code in the following cell to check the effect of each filter. *The code has been extracted from the official scikit-image documentation.*"
    ]
   },
   {
@@ -405,7 +408,7 @@
     }
    ],
    "source": [
-    "# Create figure\n",
+    "# Code extracted from https://scikit-image.org/docs/stable/auto_examples/transform/plot_radon_transform.html\n",
     "fig = plt.figure(figsize=(6, 5), dpi=120)\n",
     "\n",
     "# Plot the effects of the different filters\n",
@@ -424,7 +427,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nos quedamos con.... y reconstruimos A y B"
+    "As can be seen, **some filters focus more on high frequencies than others. The choice of one or the other filter depends on the compromise between noise and detail required for the application under consideration.**\n",
+    "\n",
+    "For the next examples, we will use the ***shepp-logan*** filter because it reduces noise without sacrificing too much of the image detail.\n",
+    "\n",
+    "For the first case, the sinograms of case A (fixed angle range and different number of projections) and for the second case, those of case B (fixed number of projections and different angle ranges) will be taken."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Case A:** Use a fixed angle range in a different number of projections."
    ]
   },
   {
@@ -477,6 +491,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Case B**: Use a fixed number of projections in different angle ranges. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -523,6 +544,18 @@
     "        \n",
     "fig.tight_layout()\n",
     "plt.savefig('docs/images/reconstructions_angles.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following conclusions can be drawn from the experiments carried out:\n",
+    "\n",
+    "* **Case A:** **A sufficient number of projections have to be taken so that the image can be adequately reconstructed.** Thus, as explained above, the rule of thumb states that **the number of projections should be about the same as the number of pixels** there are across the object. On the other hand, the representation obtained increases the understanding of the reconstruction process since the functioning of the projections is intuited.\n",
+    "\n",
+    "\n",
+    "* **Case B**: The range of angles from which the projections are taken greatly influences the quality obtained when reconstructing the shape of the object. In addition, it is important to note that **this fact demonstrates what has already been said about the angle needed to obtain good measurements. We can see how an angle of 180º, obtaining half a cycle and the amplitude, is sufficient to define the reconstruction.** For that reason, Radon transform is calculated for angles between 0° and 180° since in this way, the number of scans of the patience is minimized."
    ]
   },
   {
